recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:6: error: not enough arguments for method isMember: (l: List[Int], v: Int)Boolean.
Unspecified value parameter v.
    case _::q => isMember(q)
                         ^