recursion.cons.ismember.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  l match {
    case Nil => false
    case h::q if (v==h) => true
    case _::q => isMember(q)
  }
}